Fixed 404 height issue

--- a/stylesheets/components/_banner.scss
+++ b/stylesheets/components/_banner.scss
@@ -23,7 +23,7 @@
 }
 .banner-404{
 	background-image: none;
-	height: 505px;
+	height: auto;
 	position: relative;
 	/*z-index: 17;*/
 	a{ color: #CFFDF3; border-bottom:1px dotted #CFFDF3;  }
