Landing page form CSS fix

--- a/stylesheets/page/_landing-page.scss
+++ b/stylesheets/page/_landing-page.scss
@@ -605,7 +605,7 @@
     padding-top: 135px;
     .banner-form {
     	width: 355px;
-    	margin-top: -40px;
+    	// margin-top: -40px;
 	}
 	h1.b-heading {
     	color: #4d4d4d;
