--- a/stylesheets/page/_new-header.scss
+++ b/stylesheets/page/_new-header.scss
@@ -134,6 +134,7 @@
 	margin-top: 3px;
 	margin-bottom: 3px;
 	outline: none;
+	float: left;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/fd-logo.png', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/fd-logo.png', sizingMethod='scale')";
 }
