--- a/stylesheets/page/_new-home.scss
+++ b/stylesheets/page/_new-home.scss
@@ -126,8 +126,8 @@
 	padding-bottom: 30px;
 	.fg-4{
 		width: 25%;
-		margin-right: 12%;
-		&:last-child{ margin-right: 0; }
+		/*@noflip*/ margin-right: 12%;
+		&:last-child{/*@noflip*/  margin-right: 0; }
 	}
 	.hexagon-content{
 		margin-top: 10px;
@@ -191,11 +191,12 @@
 		display: block;
 		.home-tour-content{
 			position: absolute;
-			left: 50%;
+			/*@noflip*/ left: 50%;
 			top: 85px;
 			p{
 				font-size: 32px;
 				line-height: 1.4;
+                /*@replace: right*/text-align: left;
 			}
 		}
 	}
@@ -224,7 +225,7 @@
 			background-size: 50px;
 			position: absolute;
 			margin-top: -80px;
-			right: 3%;
+			/*@noflip*/ right: 3%;
 			opacity: 0.5;
 			cursor: pointer;
 		}
@@ -243,7 +244,7 @@
 	@include transform(rotate(1deg));
 	display: block;
 	position: relative;
-	left: -1px;
+	/*@noflip*/left: -1px;
 	top: 18px;
 	z-index: 2;
 	box-shadow: -1px -6px 0px 6px #ffffff;
@@ -256,7 +257,7 @@
 	margin-top: -28px;
 	display: block;
 	position: relative;
-	left: -1px;
+	/*@noflip*/left: -1px;
 	box-shadow: 7px 5px 0px 10px #f1f1f1;
 }
 
@@ -284,7 +285,7 @@
 		border-right: 20px solid #f1f1f1;
 		border-top: 20px solid #f1f1f1;
 		bottom: -7px;
-		right: -10px;
+		/*@noflip*/right: -10px;
 		transform: rotate(144deg);
 		-moz-transform: rotate(144deg);
 		-ms-transform: rotate(144deg);
@@ -297,7 +298,7 @@
 		width: 240px;
 		height: 200px;
 		display: inline-block;
-		margin-left: 6%;
+		/*@noflip*/margin-left: 6%;
 		margin-bottom: 5%;
 		background-color: #fff;
 	}
@@ -361,7 +362,7 @@
 	-webkit-transform: rotate(1deg);
 	display: block;
 	position: relative;
-	left: -1px;
+	/*@noflip*/ left: -1px;
 	top: 23px;
 	box-shadow: 7px -33px 0px 6px #f1f1f1;
 }
@@ -383,7 +384,7 @@
 	position: absolute;
 	width: 100%;
 	top: -40px;
-	left: -2px;
+	/*@noflip*/ left: -2px;
 	box-shadow: $footer-background 8px -6px 0px 24px;
 	-webkit-box-shadow: $footer-background 8px -6px 0px 24px;
 	-moz-box-shadow: $footer-background 8px -6px 0px 24px;
