--- a/stylesheets/page/_common.scss
+++ b/stylesheets/page/_common.scss
@@ -665,7 +665,7 @@ img[src*="insight.adsrvr.org"]{
 .fg-7, .fg-4{
     /*@noflip*/ float:left;
 }
-.fg-4, .fg-8{
+.fg-4, .fg-8, .fg-7, .fg-5{
     /*@noflip*/ margin-right: 3.44828%;
     /*@noflip*/ margin-left: 0;
 }
