--- a/stylesheets/page/_new-tour.scss
+++ b/stylesheets/page/_new-tour.scss
@@ -448,7 +448,7 @@ only screen and (                min-resolution: 2dppx) {
 		transform: rotate(12deg);
 		-moz-transform: rotate(12deg);
 		-webkit-transform: rotate(12deg);
-		margin-left: -5px;
+		/*@noflip*/margin-left: -5px;
 	}
 	.secondary-btmlink-2{
 		width: 100%;
@@ -461,7 +461,7 @@ only screen and (                min-resolution: 2dppx) {
 		position: relative;
 		top: -58px;
 		overflow: hidden;
-		box-shadow: 6px -37px 0px 0 #fff;
+		/*@noflip*/box-shadow: 6px -37px 0px 0 #fff;
 	}
 	.secondary-btmlink-3{
 		width: 200px;
@@ -473,10 +473,10 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(12deg);
 		position: absolute;
 		top: -101px;
-		right: 5px;
+		/*@noflip*/right: 5px;
 		z-index: 2;
 		padding-top: 30px;
-		box-shadow: 18px 0px 0px 0 #f1f1f1;
+		/*@noflip*/box-shadow: 18px 0px 0px 0 #f1f1f1;
 	}
 	.secondary-multibtmlink{
 		position: relative;
@@ -488,9 +488,9 @@ only screen and (                min-resolution: 2dppx) {
 		transform: rotate(12deg);
 		-moz-transform: rotate(12deg);
 		-webkit-transform: rotate(12deg);
-		margin-left: -5px;
-		left: 0;
-		box-shadow: 6px 22px 0px 0 #fff;
+		/*@noflip*/margin-left: -5px;
+		/*@noflip*/left: 0;
+		/*@noflip*/box-shadow: 6px 22px 0px 0 #fff;
 	}
 	.secondary-multibtmlink-2{
 		width: 80%;
@@ -502,9 +502,9 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(-1deg);
 		position: relative;
 		top: -78%;
-		float: left;
+		/*@noflip*/float: left;
 		overflow: hidden;
-		box-shadow: 6px -52px 0px 0 #fff;
+		/*@noflip*/box-shadow: 6px -52px 0px 0 #fff;
 	}
 	.secondary-multibtmlink-3{
 		width: 20%;
@@ -516,11 +516,11 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(9deg);
 		position: relative;
 		top: -103%;
-		right: 5px;
+		/*@noflip*/right: 5px;
 		z-index: 2;
-		float: right;
+		/*@noflip*/float: right;
 		padding-top: 30px;
-		box-shadow: 2px -16px 0px 10px #fff;
+		/*@noflip*/box-shadow: 2px -16px 0px 10px #fff;
 	}
 
 }
@@ -536,10 +536,10 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(12deg);
 		position: absolute;
 		top: -101px;
-		right: 5px;
+		/*@noflip*/right: 5px;
 		z-index: 2;
 		padding-top: 30px;
-		box-shadow: 18px 0px 0px 0 #f1f1f1;
+		/*@noflip*/box-shadow: 18px 0px 0px 0 #f1f1f1;
 	}
 
 
@@ -781,7 +781,7 @@ only screen and (                min-resolution: 2dppx) {
 	max-height: 450px;
 }
 
-.tour-widget .tour-widget-img.tabimage2{ float: none;}
+.tour-widget .tour-widget-img.tabimage2{ /*@replace: right*/float: none;}
 
 .tour-widget{
 	width: 29.5%;
@@ -851,8 +851,8 @@ only screen and (                min-resolution: 2dppx) {
 }
 .tour-next .next-title:before {
 	content: '';
-	/*@noflip*/border-left: 2px solid #999999;
-	padding-right: 20px;
+    /*@noflip*/border-left: 2px solid #999999;
+	/*@noflip*/padding-right: 20px;
 }
 .tour-bottom-strip{
 	padding: 40px 0;
@@ -1547,7 +1547,7 @@ only screen and (                min-resolution: 2dppx) {
 		display: inline-block;
 		vertical-align: middle;
 		border-radius: 3px;
-		margin-right: 10px;
+		/*@noflip*/margin-right: 10px;
 	}
 	.bar-teal{
 		background-color: rgba(39, 167, 142, 0.7);
@@ -1629,7 +1629,7 @@ only screen and (                min-resolution: 2dppx) {
 	width: 240px;
 	height: 200px;
 	display: inline-block;
-	margin-left: 6%;
+	/*@noflip*/margin-left: 6%;
 	margin-bottom: 5%;
 	background-color: #fff;
 	img{
