--- a/stylesheets/components/_footer.scss
+++ b/stylesheets/components/_footer.scss
@@ -102,9 +102,8 @@ footer{
 				width: 100%; 
 				font-weight: $font-weight-light;
 				background-color: $footer-bg;
-				/*@noflip*/border-right: 1px solid #239f85;
+				border-right: 1px solid #239f85;
 				outline: none;
-                /*@replace: right*/text-align: left;
 			}
 		}
 		button { width: 70px; } 
@@ -253,14 +252,4 @@ footer{
 } 
 .app-widget{
     /*@replace: right*/text-align: left;
-}
-
-footer{
-    .fg-8{
-        /*@replace: 0*/margin-right: 3.44828%;
-        /*@replace: 3.44828%*/margin-left: 0;
-    }
-    .omega{
-        /*@replace: left*/float: right;
-    }
 }
