--- a/stylesheets/page/_new-tour.scss
+++ b/stylesheets/page/_new-tour.scss
@@ -188,7 +188,7 @@ only screen and (                min-resolution: 2dppx) {
 	background: url(#{$cdn_path}/images/tour/tour-banner-left-arrow.png) no-repeat;
 	background-size: 25px;
 	margin-top: 69px;
-	/*@noflip*/left: -60px;
+	left: -60px;
 }
 .left-nav:hover,.right-nav:hover{ opacity: 1; }
 
@@ -434,7 +434,7 @@ only screen and (                min-resolution: 2dppx) {
 	background-color: #fff;
 	height: 60px;	
 	margin-bottom: 20px;
-	/*@noflip*/margin-left: -2px;
+	margin-left: -2px;
 	transform: rotate(-1deg);
 	-moz-transform: rotate(-1deg);
 	-webkit-transform: rotate(-1deg);
@@ -448,7 +448,7 @@ only screen and (                min-resolution: 2dppx) {
 		transform: rotate(12deg);
 		-moz-transform: rotate(12deg);
 		-webkit-transform: rotate(12deg);
-		/*@noflip*/margin-left: -5px;
+		margin-left: -5px;
 	}
 	.secondary-btmlink-2{
 		width: 100%;
@@ -461,7 +461,7 @@ only screen and (                min-resolution: 2dppx) {
 		position: relative;
 		top: -58px;
 		overflow: hidden;
-		/*@noflip*/box-shadow: 6px -37px 0px 0 #fff;
+		box-shadow: 6px -37px 0px 0 #fff;
 	}
 	.secondary-btmlink-3{
 		width: 200px;
@@ -473,10 +473,10 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(12deg);
 		position: absolute;
 		top: -101px;
-		/*@noflip*/right: 5px;
+		right: 5px;
 		z-index: 2;
 		padding-top: 30px;
-		/*@noflip*/box-shadow: 18px 0px 0px 0 #f1f1f1;
+		box-shadow: 18px 0px 0px 0 #f1f1f1;
 	}
 	.secondary-multibtmlink{
 		position: relative;
@@ -488,9 +488,9 @@ only screen and (                min-resolution: 2dppx) {
 		transform: rotate(12deg);
 		-moz-transform: rotate(12deg);
 		-webkit-transform: rotate(12deg);
-		/*@noflip*/margin-left: -5px;
-		/*@noflip*/left: 0;
-		/*@noflip*/box-shadow: 6px 22px 0px 0 #fff;
+		margin-left: -5px;
+		left: 0;
+		box-shadow: 6px 22px 0px 0 #fff;
 	}
 	.secondary-multibtmlink-2{
 		width: 80%;
@@ -502,9 +502,9 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(-1deg);
 		position: relative;
 		top: -78%;
-		/*@noflip*/float: left;
+		float: left;
 		overflow: hidden;
-		/*@noflip*/box-shadow: 6px -52px 0px 0 #fff;
+		box-shadow: 6px -52px 0px 0 #fff;
 	}
 	.secondary-multibtmlink-3{
 		width: 20%;
@@ -516,11 +516,11 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(9deg);
 		position: relative;
 		top: -103%;
-		/*@noflip*/right: 5px;
+		right: 5px;
 		z-index: 2;
-		/*@noflip*/float: right;
+		float: right;
 		padding-top: 30px;
-		/*@noflip*/box-shadow: 2px -16px 0px 10px #fff;
+		box-shadow: 2px -16px 0px 10px #fff;
 	}
 
 }
@@ -536,17 +536,16 @@ only screen and (                min-resolution: 2dppx) {
 		-webkit-transform: rotate(12deg);
 		position: absolute;
 		top: -101px;
-		/*@noflip*/right: 5px;
+		right: 5px;
 		z-index: 2;
 		padding-top: 30px;
-		/*@noflip*/box-shadow: 18px 0px 0px 0 #f1f1f1;
+		box-shadow: 18px 0px 0px 0 #f1f1f1;
 	}
 
 
 .tour-content-wrapper{
 	position: relative;
 	padding-bottom: 60px;
-    /*@replace: right*/text-align: left;
 	h1{
 		font-size: 42px;
 		font-weight: $font-weight-light;
@@ -781,7 +780,7 @@ only screen and (                min-resolution: 2dppx) {
 	max-height: 450px;
 }
 
-.tour-widget .tour-widget-img.tabimage2{ /*@replace: right*/float: none;}
+.tour-widget .tour-widget-img.tabimage2{ float: none;}
 
 .tour-widget{
 	width: 29.5%;
@@ -814,8 +813,8 @@ only screen and (                min-resolution: 2dppx) {
 	margin: 0 auto 20px;
 	border-bottom: 1px solid #f1f1f1;
 	.tour-author{ 
-		/*@noflip*/float: right;
-		.ta-name,.ta-comp{ color: #16a085; display: block; /*@noflip*/text-align: right;  }
+		float: right;
+		.ta-name,.ta-comp{ color: #16a085; display: block; text-align: right;  }
 		.ta-name{ font-weight: $font-weight-normal; }
 		.ta-comp{ font-weight: $font-weight-light; }
 	}
@@ -836,23 +835,23 @@ only screen and (                min-resolution: 2dppx) {
 	background-size: 85px;
 }
 .tour-right-nav{
-	/*@noflip*/background-position: -48px -1px;
-	/*@noflip*/margin-left: 25px;
+	background-position: -48px -1px;
+	margin-left: 25px;
 }
 .tour-left-nav{
-	/*@noflip*/background-position: 1px -2px;
-	/*@noflip*/margin-right: 25px;
+	background-position: 1px -2px;
+	margin-right: 25px;
 }
 .tour-previous .prev-title:after {
 	content: '';
-	/*@noflip*/border-right: 2px solid #999999;
+	border-right: 2px solid #999999;
 	height: 30px;
-	/*@noflip*/padding-left: 20px;
+	padding-left: 20px;
 }
 .tour-next .next-title:before {
 	content: '';
-    /*@noflip*/border-left: 2px solid #999999;
-	/*@noflip*/padding-right: 20px;
+	border-left: 2px solid #999999;
+	padding-right: 20px;
 }
 .tour-bottom-strip{
 	padding: 40px 0;
@@ -1547,7 +1546,7 @@ only screen and (                min-resolution: 2dppx) {
 		display: inline-block;
 		vertical-align: middle;
 		border-radius: 3px;
-		/*@noflip*/margin-right: 10px;
+		margin-right: 10px;
 	}
 	.bar-teal{
 		background-color: rgba(39, 167, 142, 0.7);
@@ -1629,7 +1628,7 @@ only screen and (                min-resolution: 2dppx) {
 	width: 240px;
 	height: 200px;
 	display: inline-block;
-	/*@noflip*/margin-left: 6%;
+	margin-left: 6%;
 	margin-bottom: 5%;
 	background-color: #fff;
 	img{
@@ -1934,10 +1933,6 @@ $gray: #eee;
 	-ms-animation: fadeInDown 1s;
 	-o-animation: fadeInDown 1s;
 	animation: fadeInDown 1s;
-}
-
-.emailticketing{
-    /*@replace: right*/text-align: left;
 }
 
 
