RTL css changes

--- a/stylesheets/components/_form.scss
+++ b/stylesheets/components/_form.scss
@@ -152,7 +152,7 @@ $form-error-color: rgb(211, 136, 136);
 
 .domain{
 	position: relative;
-	overflow: hidden;
+	//overflow: hidden;
 }
 
 .ghostwriter_info{
