signup and RTL changes

--- a/stylesheets/components/_footer.scss
+++ b/stylesheets/components/_footer.scss
@@ -215,7 +215,7 @@ footer{
 	@extend .small;
 	padding: 20px 0;
 	color: #999999;
-	text-align: right;
+	/*@noflip*/text-align: right;
 }
 
 .copy-separator { 
