--- a/stylesheets/page/_common.scss
+++ b/stylesheets/page/_common.scss
@@ -662,7 +662,7 @@ img[src*="insight.adsrvr.org"]{
 
 /* RTL Classes */
 
-.fg-7, .fg-4{
+.fg-7, .fg-4, .fg-8{
     /*@noflip*/ float:left;
 }
 .fg-4, .fg-8{
