--- a/stylesheets/page/_landing-page.scss
+++ b/stylesheets/page/_landing-page.scss
@@ -616,6 +616,7 @@
     	font-weight: 400;
     	font-size: 38px;
         clear: both;
+        text-align: left;
 	}
 	h1.su-subtitle{
 		color: #4d4d4d;
@@ -623,9 +624,11 @@
 		font-weight: 300;
     	padding-top: 5px;
     	text-shadow: none;
+        text-align: left;
 	}
     h1.k-heading{
         float: left;
+        text-align: left;
     }
 	.ulcont {
     	display: block;
@@ -681,70 +684,13 @@
   	}
 }
 
-.customer-care, .helpdesk-banner, .signup-banner-strip{
-    .b-form #signup .user_row.firstname {
-        width: 50%;
-        float: left; }
-    .b-form {border:5px solid #107360;}.tc-text{font-size:12px;}
-    .b-form #signup input.text:focus {
-        border-color: #1bc4a3; }
-    .b-form #signup .textfield.active input.text {
-        border-bottom-color: #1bc4a3; }
-    .b-form #signup .textfield.active.lastname::before {
-        border-left-color: #1bc4a3; }
-    .b-form #signup .textfield.error.lastname::before {
-        border-left-color: #d38888; }
-    .b-form #signup .textfield.error.active.lastname::before {
-        border-left-color: #1bc4a3; }
-    .b-form #signup .user_row.firstname .error {
-        /*@replace: -208%*/right: -308%;
-        width: 200%; }
-    .b-form #signup .user_row.lastname {
-        width: 50%;
-        float: left; }
-    .b-form #signup .user_row.lastname input {
-        padding-left: 20px; }
-    .b-form #signup .user_row.lastname::before {
-        content: '';
-        position: absolute;
-        border-left: 1px solid #e0e0e0;
-        width: 1px;
-        height: 40px;
-        left: 0;
-        top: 10px;
-        display: block; }
-    .b-form #signup .user_row.firstname .error {
-        width: 200%;
-        }
-}
-.customer-care, .support, .landing-right-panel, .vs-signup{
-    .b-form #signup .user_row.firstname .error {
-	   	/*@replace: -308%*/left: -208%;
-    	width: 200%; 
-   }
+.helpdesk-software.crm-land .helpdesk-banner .content-wrapper h1{
+    font-size:30px;
+    margin-top:20px;
+    text-align: left;
+    clear: both;
 }
 
-.support-light{
-        
-    .b-form #signup .user_row.firstname .error {
-        /*@replace: -208%*/right: -308%;
-        width: 200%; }
-    .b-form #signup .user_row.lastname {
-        width: 50%;
-        float: left; }
-    .b-form #signup .user_row.lastname input {
-        padding-left: 20px; }
-    .b-form #signup .user_row.lastname::before {
-        content: '';
-        position: absolute;
-        border-left: 1px solid #e0e0e0;
-        width: 1px;
-        height: 40px;
-        left: 0;
-        top: 10px;
-        display: block; }
-    .b-form #signup .user_row.firstname .error {
-        width: 200%;
-        /*@replace: -308%*/left: -208%;
-        }
+.vs-signup{
+    text-align: left;
 }
