--- a/stylesheets/page/_landing-page.scss
+++ b/stylesheets/page/_landing-page.scss
@@ -183,9 +183,9 @@
 			font-size: 24px;
 	    	display: inline-block;
 	    	font-weight: 400;
-	    	margin-left: 15px;
+	    	/*@noflip*/margin-left: 15px;
 		} 
-		p{ font-size: 18px;  }
+		p{ font-size: 18px; text-align: left;}
 
 	}
 }
@@ -546,8 +546,6 @@
 		.mail, .forum, .social{ margin-right: 12px; }
 
 		.support-content{ width: 80%; }
-
-		.lp-signup .b-form{ width: 270px; }
 	}
 
 	.lp-plans{
@@ -557,7 +555,10 @@
 
 		.plans-wrapper {
 			width: 30.41379%;
-			margin-right: 2.5%;
+			margin-right: 1.5%;
+            display: inline-block;
+            float: none;
+            vertical-align: top;
 		}
 
 		.sprout, .blossom, .garden, .estate {
