--- a/stylesheets/page/_new-pricing.scss
+++ b/stylesheets/page/_new-pricing.scss
@@ -226,7 +226,7 @@
 	@include transform(rotate(1.2deg));
 	display: block;
 	position: relative;
-	left: -1px;
+	/*@noflip*/left: -1px;
 	top: 25px;
 	z-index: 2;
 	@include box-shadow(-1px -6px 0px 6px #ffffff);
@@ -236,18 +236,18 @@
 	position: absolute;
 	top: 120px;
 	margin: 0 auto;
-	left: 0;
+	/*@noflip*/left: 0;
 	color: #fff;
-	right: 14%;
+	/*@noflip*/right: 14%;
 	h3{ 
 		font-weight: $font-weight-light; 
 		width: 80%;
-		    text-align: right;
+		/*@noflip*/text-align: right;
 	}
 }
 .pr-sign-link{
 	position: absolute;
-	right: 0;
+	/*@noflip*/right: 0;
 	color: #fff;
 	height: 300px;
 	background-color: rgba(0, 0, 0, 0.05);
@@ -292,10 +292,12 @@
 	h5{ 
 		font-size: 24px; 
 		margin: 0;
+        text-align: left;
 	}
 	p{
 		@extend .default;
 		line-height: 1.4;
+        text-align: left;
 	}
 	a{ @extend .default; }
 }
