--- a/stylesheets/components/_header.scss
+++ b/stylesheets/components/_header.scss
@@ -54,8 +54,11 @@ header{padding-top: 10px;}
 		color: $color-black-lite;
 		border-left: 1px solid #e9e9e9;
 		line-height: .5rem;
-		&:first-child{ border-left:none;}
+		&:first-child{ border-left:none; /*@replace:none*/display: block;}
 	}
+    #lang-switch{
+        /*@noflip*/border-right-width: 0;
+    }
 	.top-nav-contact{
 		font-weight: 600;
 		overflow: hidden;
@@ -205,9 +208,10 @@ header{padding-top: 10px;}
 	@include box-shadow (1px 2px 10px rgba(0,0,0,0.1));
 	border: 1px solid #ededed;
 	position: absolute;
-	margin-left: -14px;
+	/*@replace: -73px*/margin-left: -14px;
 	top: 30px;
-	z-index: 15;	
+	z-index: 15;
+    text-align: left;
 	a{
 		color: $color-black-lite;	
 		padding: 10px 12px;
