--- a/stylesheets/page/_common.scss
+++ b/stylesheets/page/_common.scss
@@ -72,6 +72,7 @@ a,a:hover, a:focus, a:active{ outline: none; }
 
 /* ===== Inner Pages ===== */
 .widget{
+    /*@replace: 0px !important*/border-bottom-width: 0px;
 	padding-bottom: 20px;
 	padding-top: 20px;
 	.w-title{
