--- a/stylesheets/page/_new-header.scss
+++ b/stylesheets/page/_new-header.scss
@@ -182,7 +182,7 @@
 		border-color: transparent transparent #fdfafa;
 		border-style: solid;
 		border-width: 13px;
-		margin-left: 17px;
+		/*@replace: 3px*/margin-left: 17px;
 		z-index: 99999;
 	}
 	.sub-menu{
@@ -218,7 +218,7 @@
 		top: 3.5em;
 		-moz-transform: rotate(45deg);
 		-webkit-transform: rotate(45deg);
-		margin-left: 21px;
+		/*@replace: 7px*/margin-left: 21px;
 		background-color: #fff;
 		font-size: inherit;
 	}
