--- a/stylesheets/components/_header.scss
+++ b/stylesheets/components/_header.scss
@@ -54,11 +54,8 @@ header{padding-top: 10px;}
 		color: $color-black-lite;
 		border-left: 1px solid #e9e9e9;
 		line-height: .5rem;
-		&:first-child{ border-left:none; /*@replace:none*/display: block;}
+		&:first-child{ border-left:none;}
 	}
-    #lang-switch{
-        /*@noflip*/border-right-width: 0;
-    }
 	.top-nav-contact{
 		font-weight: 600;
 		overflow: hidden;
@@ -208,7 +205,7 @@ header{padding-top: 10px;}
 	@include box-shadow (1px 2px 10px rgba(0,0,0,0.1));
 	border: 1px solid #ededed;
 	position: absolute;
-	/*@replace: -73px*/margin-left: -14px;
+	/*@replace: -60px*/margin-left: -14px;
 	top: 30px;
 	z-index: 15;
     text-align: left;
