--- a/stylesheets/components/_footer.scss
+++ b/stylesheets/components/_footer.scss
@@ -104,6 +104,7 @@ footer{
 				background-color: $footer-bg;
 				/*@noflip*/border-right: 1px solid #239f85;
 				outline: none;
+                text-align: left;
 			}
 		}
 		button { width: 70px; } 
